# Vision_end_to_end

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  augment.py  config.yaml  dataset.py  inference.py  legacy.txt  poetry.toml  pyproject.toml  run.py  train.py  update.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml  test.yaml
configs/: default.yaml
configs/architecture/: base.yaml  large.yaml  small.yaml
src/groovis/: loss.py  module.py  schema.py  schemas.py  train.py  types.py  utils.py
src/groovis/configs/: __init__.py  architecture.py  datamodule.py  loss.py  optimizer.py  scheduler.py  trainer.py
src/groovis/configs/models/: __init__.py  mixer.py  timm_model.py  vit.py
src/groovis/configs/models/components/: act_layer.py  layer_norm.py
src/groovis/data/: __init__.py  augmentation.py  datamodule.py  dataset.py
src/groovis/models/: __init__.py  architectures.py  mixer.py  module.py  vit.py
src/groovis/models/components/: layer_norm.py  patch_embed.py
tests/: test__vision.py  test_loss.py
